test/integration_test/specs/mysql-1-pvc/ingress_mysql.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mysql-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /mysql
          backend:
            serviceName: mysql-service
            servicePort: 5678
